@@ -1,8 +1,6 @@
 orientations = landscape, portrait
 sizes = a4, a3
-resolutions = 72, 96, 150
 filename = "map-[date,dMY-His].pdf"
-mapServerResolution = 72
 
 a4.landscape.width = 1600
 a4.landscape.height = 900 
@@ -15,4 +13,3 @@ a3.landscape.height = 1400
 
 a3.portrait.width = 1600
 a3.portrait.height = 2100
-
