@@ -33,14 +33,15 @@ PEAR_PACKAGES_DEVEL="PhpDocumentor"
 
 
 LOG4PHP="http://www.vxr.it/log4php/log4php-0.9.tar.gz"
-SMARTY="http://smarty.net/do_download.php?download_file=Smarty-2.6.19.tar.gz"
+SMARTY="http://smarty.net/do_download.php?download_file=Smarty-2.6.22.tar.gz"
 FPDF="http://www.fpdf.org/fr/dl.php?v=153&f=tgz"
 THEMAMAP="http://cartoweb.org/downloads/themamap/themamap-0.41.tar.gz" 
 ARTICHOW="http://www.artichow.org/data/Artichow-1.1.0-php5.tar.gz"
+DOMPDF="http://switch.dl.sourceforge.net/sourceforge/dompdf/dompdf-0.5.1.tar.gz"
 
 # uncomment to upload with scp to this address
 #UPLOAD_HOST="malmurainza.c2c:public_html/cartoweb3/"
-ARCHIVE_BASENAME="cartoweb-includes-3.5.0"
+ARCHIVE_BASENAME="cartoweb-includes-3.5.1"
 
 prepare()
 {
@@ -114,6 +115,11 @@ fetch_contrib()
 
     wget -O- "$ARTICHOW"|tar zxf -
     mv Artichow-php5 artichow
+
+    ## dompdf
+    wget -O- "$DOMPDF"|tar zxf -
+    mv dompdf* dompdf
+    chmod -R 0777 dompdf/lib/fonts
 }
 
 create_tarball()
